<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtQuestionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_costum2"
            android:paddingLeft="55dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_costum2"
            android:paddingRight="55dp"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtQuestionTab"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_costum"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_a"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAnswer1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_costumbutton1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_b"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAnswer2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_costumbutton1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_c"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAnswer3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_costumbutton1"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_costum3"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>